# exceed-card-generator

./: .gitignore  flake.nix  main.py  paste.sh  pyproject.toml  readme.md  requirements.txt
assets/: normals.json  season.yaml
assets/7/: season.yaml
assets/s7/: season.yaml
exceed_card_generator/: __main__.py  schema.py  text.py  types.py
input/Slayer/: GG Strive eXceed Customs - Slayer.csv  GG_Strive eXceed Customs.ods
